fixed map async and layout breaks

--- a/client/src/IntroGraphic/IntroGraphic.css
+++ b/client/src/IntroGraphic/IntroGraphic.css
@@ -1,4 +1,4 @@
 #right-background {
-	height: 580px;
+	height: 700px;
 	background-color: #BCC6CC;
 }
